# pinboard-notes-backup

./: .gitignore  .travis.yml  CHANGELOG.md  README.md  cabal.project.freeze  make_man_page  pinboard-notes-backup.cabal  stack.yaml
.github/workflows/: main.yaml  nightly.yaml
man/: make  man_page.md  pnbackup.1
src/: Logging.hs  Main.hs  Pinboard.hs  Types.hs  Utils.hs
src/Utils/: FriendlyReqError.hs  HttpConfig.hs
travis_scripts/: attach_binary  install_github-release  install_stack
