name:                pinboard-notes-backup
version:             1.0.3
synopsis:            Efficiently back up the notes you’ve saved to Pinboard
description:         Please see README.md
homepage:            https://github.com/bdesham/pinboard-notes-backup
license:             GPL-3
license-file:        LICENSE.txt
author:              Benjamin Esham
maintainer:          benjamin@esham.io
copyright:           2016-2017, 2019 Benjamin D. Esham
category:            Web
build-type:          Simple
cabal-version:       >= 1.10

source-repository head
  type:     git
  location: git://github.com/bdesham/pinboard-notes-backup.git

executable pnbackup
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Logging Paths_pinboard_notes_backup Pinboard Types
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , aeson >= 0.8 && < 2
                       , ansi-wl-pprint == 0.6.*
                       , bytestring == 0.10.*
                       , containers == 0.5.*
                       , data-default-class
                       , hslogger == 1.2.*
                       , mtl == 2.2.*
                       , optparse-applicative >= 0.11 && < 1
                       , req == 1.0.*
                       , sqlite-simple == 0.4.*
                       , text == 1.2.*
                       , time >= 1.5 && < 2
                       , transformers >= 0.4 && < 0.6
  default-extensions:  OverloadedStrings GeneralizedNewtypeDeriving DeriveFunctor
                       DataKinds
  ghc-options:         -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
                       -fno-warn-unused-do-bind
