name:                pinboard-notes-backup
version:             1.0.5
synopsis:            Back up the notes you've saved to Pinboard
description:         A command-line application to back up your notes from the
                     Pinboard bookmarking service to a local SQLite database.
homepage:            https://github.com/bdesham/pinboard-notes-backup
license:             GPL-3
license-file:        LICENSE.txt
author:              Benjamin Esham
maintainer:          benjamin@esham.io
copyright:           2016-2017, 2019 Benjamin D. Esham
category:            Backup, CLI, Pinboard
build-type:          Simple
cabal-version:       >= 1.10
extra-source-files:  README.md
                     stack.yaml
                     stack.yaml.lock
                     man/pnbackup.1

source-repository head
  type:     git
  location: git://github.com/bdesham/pinboard-notes-backup.git

executable pnbackup
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Paths_pinboard_notes_backup Pinboard Types Utils Utils.FriendlyReqError
  default-language:    Haskell2010
  build-depends:       base                   >= 4.7  && < 5
                       , aeson                >= 0.8  && < 1.5
                       , ansi-wl-pprint       >= 0.6  && < 0.7
                       , bytestring           >= 0.10 && < 0.11
                       , containers           >= 0.5  && < 0.7
                       , http-client          >= 0.5  && < 0.7
                       , http-types           >= 0.12 && < 0.13
                       , mtl                  >= 2.2  && < 2.3
                       , optparse-applicative >= 0.11 && < 0.15
                       , req                  >= 1.0  && < 2.2
                       , sqlite-simple        >= 0.4  && < 0.5
                       , text                 >= 1.2  && < 1.3
                       , time                 >= 1.5  && < 1.10
                       , transformers         >= 0.4  && < 0.6
  default-extensions:  DataKinds
                       DeriveFunctor
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       OverloadedStrings
  ghc-options:         -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
                       -fno-warn-unused-do-bind
